compiling_error.txt
C:\Users\otaco\Desktop\DevProjects\ScotsEn\main.cpp:28:14: error: expected '{' before ';' token
 namespace std;
              ^
C:\Users\otaco\Desktop\DevProjects\ScotsEn\main.cpp:30:8: error: expected unqualified-id before '=' token
 string = "know" == "ken"
        ^
C:\Users\otaco\Desktop\DevProjects\ScotsEn\main.cpp:75:1: error: expected unqualified-id before 'return'
 return 0;
 ^~~~~~
